crates/org-parser/snapshots/org_rust_parser__object__markup__tests__basic_code.snap
---
source: crates/org-parser/src/object/markup.rs
description: ~hello_world~
---
0..14 [1]
  0..14 Paragraph([2])
    0..13 Code("hello_world")
