crates/org-parser/snapshots/org_rust_parser__object__markup__tests__basic_underline.snap
---
source: crates/org-parser/src/object/markup.rs
description: _hello_world_
---
0..14 [1]
  0..14 Paragraph([3])
    0..13 Underline([2])
      1..12 "hello_world"
