crates/org-parser/snapshots/org_rust_parser__object__markup__tests__leaky_markup.snap
---
source: crates/org-parser/src/object/markup.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"abc /one *two thr/ ee* three four"
0..34 [1]
  0..34 Paragraph([5, 4, 6])
    0..4 "abc "
    4..18 Italic([3, 2])
      5..10 "one *"
      10..17 "two thr"
    18..33 " ee* three four"
