crates/org-parser/snapshots/org_rust_parser__object__markup__tests__markup_not_fail_on_eof.snap
---
source: crates/org-parser/src/object/markup.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"/"
0..2 [1]
  0..2 Paragraph([2])
    0..1 "/"
