crates/org-parser/snapshots/org_rust_parser__object__markup__tests__markup_plain_single_char.snap
---
source: crates/org-parser/src/object/markup.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"~a~"
0..4 [1]
  0..4 Paragraph([2])
    0..3 Code("a")
