crates/org-parser/snapshots/org_rust_parser__object__markup__tests__markup_recursive_empty.snap
---
source: crates/org-parser/src/object/markup.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"**"
0..3 [1]
  0..3 Paragraph([2])
    0..2 "**"
