crates/org-parser/snapshots/org_rust_parser__object__markup__tests__markup_recursive_single_char.snap
---
source: crates/org-parser/src/object/markup.rs
expression: "$crate :: test_util :: snapshot_text(parser)"
---
"/a/"
0..4 [1]
  0..4 Paragraph([3])
    0..3 Italic([2])
      1..2 "a"
